Added <header>, <section>, <aside>, and <footer>

--- a/index.html
+++ b/index.html
@@ -10,5 +10,42 @@
 </head>
 
 <body>
+  <header>
+	  <h1>Smith Photography</h1>
+	  <nav>
+		  <ul>
+			  <il>Home</il>
+			  <il>About</il>
+			  <il>Contact</il>
+		  </ul>
+	  </nav>
+	</header>
+	<section>
+		<h2>Capture Your Favorite Moments </h2>
+		<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
+Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait 
+		</p>
+		<figure1>
+		<img src="images/photo-studio.jpeg" alt="Photo Studio">
+			<figcaption>Our Photo Studio
+			</figcaption>
+		</figure1>
+		<p>Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+	</section>
+		<aside>
+		<p>Our Photograhers</p>
+		<figure2>
+		<img src="images/woman-photo.jpeg" alt="woman with camera taking a picture">
+			<figcaption> Alice Smith</figcaption>
+			<img src="images/man-photo.jpeg" alt="man with camera taking a picture">
+			<figcaption>Zach Smith </figcaption>
+		</figure2>
+	</aside>
+	<footer>
+		<p>1234 Main Street Nowhere CA 56780</p>
+		<p>555-1234567 Lorem@ipsum.com </p>
+		<p>This is an example site for educational purpose only.</p>
+	</footer>
   
 </body>
